"Bazel dependencies"

bazel_dep(name = "aspect_rules_py")
bazel_dep(name = "bazel_features", version = "1.38.0")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "tar.bzl", version = "0.10.1")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "llvm", version = "0.8.3")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_shell", version = "0.4.1")

local_path_override(
    module_name = "aspect_rules_py",
    path = "..",
)

# Ensure any transitive "aspect_bazel_lib" is latest to be forward compatible with bazel_lib 3+
single_version_override(
    module_name = "aspect_bazel_lib",
    version = "2.22.5",
)

# Python interpreters provisioned from python-build-standalone via aspect_rules_py
interpreters = use_extension("@aspect_rules_py//py:extensions.bzl", "python_interpreters")
interpreters.configure(
    releases = [
        "20260303",
        "20251031",
        "20241002",
    ],
)
interpreters.toolchain(
    python_version = "3.9",
)
interpreters.toolchain(
    python_version = "3.10",
)
interpreters.toolchain(
    python_version = "3.11",
)
interpreters.toolchain(
    python_version = "3.12",
)
interpreters.toolchain(
    python_version = "3.13",
)
use_repo(interpreters, "python_interpreters")

register_toolchains("@python_interpreters//:all")

# rules_py tools — provides the native_build_toolchain entries for sdist builds.
tools = use_extension("@aspect_rules_py//py:extensions.bzl", "py_tools")
tools.rules_py_tools()
use_repo(tools, "rules_py_tools")

register_toolchains("@rules_py_tools//:all")

# CC toolchain for native sdist builds (e.g. cdifflib, pyahocorasick).
register_toolchains("@llvm//toolchain:all")

# For the OCI tests
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu",
    digest = "sha256:c35e29c9450151419d9448b0fd75374fec4fff364a27f176fb458d472dfc9e54",
    image = "public.ecr.aws/docker/library/ubuntu",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
    tag = "latest",
)
use_repo(oci, "ubuntu", "ubuntu_linux_amd64", "ubuntu_linux_arm64_v8")

bazel_dep(name = "container_structure_test", version = "1.22.1")

bazel_lib_toolchains = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains", dev_dependency = True)
use_repo(bazel_lib_toolchains, "bsd_tar_toolchains")

# Default uv toolchain used by every uv-based case.
uv_bin = use_extension("@aspect_rules_py//uv:extensions.bzl", "uv_bin")
uv_bin.toolchain(version = "0.11.6")
use_repo(uv_bin, "uv")

uv = use_extension("@aspect_rules_py//uv:extensions.bzl", "uv")

# Per-case MODULE fragments. Each redeclares its own use_extension(...) proxies.
include("//cases/arch-alias-marker:setup.MODULE.bazel")
include("//cases/azure-core-tracing-overlap:setup.MODULE.bazel")
include("//cases/azure-namespace-sibling:setup.MODULE.bazel")
include("//cases/cross-repo-610:setup.MODULE.bazel")
include("//cases/current-py-toolchain-bazel-env-896:setup.MODULE.bazel")
include("//cases/firebase-admin-import:setup.MODULE.bazel")
include("//cases/freethreaded-805:setup.MODULE.bazel")
include("//cases/inactive-marker:setup.MODULE.bazel")
include("//cases/interpreter-local-pyvenv-home:setup.MODULE.bazel")
include("//cases/interpreter-prerelease:setup.MODULE.bazel")
include("//cases/multi-project-hub:setup.MODULE.bazel")
include("//cases/oci:setup.MODULE.bazel")
include("//cases/pth-namespace-547:setup.MODULE.bazel")
include("//cases/pytest-anyio-plugin:setup.MODULE.bazel")
include("//cases/pytest-main-867:setup.MODULE.bazel")
include("//cases/pytest-mock-530:setup.MODULE.bazel")
include("//cases/pytest-subdir-imports:setup.MODULE.bazel")
include("//cases/pytest-xdist-integration:setup.MODULE.bazel")
include("//cases/repository-rule-deps-299:setup.MODULE.bazel")
include("//cases/single-project-hub:setup.MODULE.bazel")
include("//cases/unconstrained-dependencies:setup.MODULE.bazel")
include("//cases/uv-abi3-compat-853:setup.MODULE.bazel")
include("//cases/uv-bare-linux-wheels:setup.MODULE.bazel")
include("//cases/uv-conflict-817:setup.MODULE.bazel")
include("//cases/uv-conflict-gte:setup.MODULE.bazel")
include("//cases/uv-conflict-max-863:setup.MODULE.bazel")
include("//cases/uv-conflict-tilde-856:setup.MODULE.bazel")
include("//cases/uv-console-script-binary:setup.MODULE.bazel")
include("//cases/uv-console-script-extras:setup.MODULE.bazel")
include("//cases/uv-dep-hashes:setup.MODULE.bazel")
include("//cases/uv-deps-650:setup.MODULE.bazel")
include("//cases/uv-data-purelib:setup.MODULE.bazel")
include("//cases/uv-dup-lock-records:setup.MODULE.bazel")
include("//cases/uv-include-group:setup.MODULE.bazel")
include("//cases/uv-incompatible-wheel-source:setup.MODULE.bazel")
include("//cases/uv-legacy-deps-750:setup.MODULE.bazel")
include("//cases/uv-no-sdist-754:setup.MODULE.bazel")
include("//cases/uv-patching-829:setup.MODULE.bazel")
include("//cases/uv-platform-filter-844:setup.MODULE.bazel")
include("//cases/uv-plus-version:setup.MODULE.bazel")
include("//cases/uv-pyproject-cases:setup.MODULE.bazel")
include("//cases/uv-requirements-bzl:setup.MODULE.bazel")
include("//cases/uv-sdist-fallback:setup.MODULE.bazel")
include("//cases/uv-sdist-jdk-build:setup.MODULE.bazel")
include("//cases/uv-sdist-mpicc:setup.MODULE.bazel")
include("//cases/uv-sdist-native-build:setup.MODULE.bazel")
include("//cases/uv-toolchain:setup.MODULE.bazel")
include("//cases/uv-whl-install-output-group:setup.MODULE.bazel")
include("//cases/uv-workspace-789:setup.MODULE.bazel")
include("//cases/venv-bin-scripts-423:setup.MODULE.bazel")
include("//cases/venv-internal-symlinks:setup.MODULE.bazel")

register_toolchains("@uv//:all")
