load("@bazel_lib//:bzl_library.bzl", "bzl_library")

# Users can set, e.g. --@aspect_rules_py//py:python_version=3.12
alias(
    name = "python_version",
    actual = "//py/private/interpreter:python_version",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//py/private:py_binary",
        "//py/private:py_image_layer",
        "//py/private:py_library",
        "//py/private:py_pex_binary",
        "//py/private:py_pytest_main",
        "//py/private:py_unpacked_wheel",
        "//py/private:py_wheel",
        "//py/private:virtual",
        "//py/private/py_venv",
        "@bazel_lib//lib:utils",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchains",
        "//py/private/release:version",
        "@aspect_tools_telemetry_report//:defs.bzl",
        "@bazel_features//:features",
    ],
)

bzl_library(
    name = "toolchains",
    srcs = ["toolchains.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//py/private/release:version",
        "//py/private/toolchain:autodetecting",
        "//py/private/toolchain:repo",
        "//py/private/toolchain:tools",
        "@bazel_features//:features",
        "@bazel_lib//lib:repositories",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
    ],
)
