load("@bazel_lib//:bzl_library.bzl", "bzl_library")

# Users can set, e.g. --@aspect_rules_py//py:python_version=3.12
alias(
    name = "python_version",
    actual = "//py/private/interpreter:python_version",
    visibility = ["//visibility:public"],
)

# Actions that need a Python executable should not need a direct rules_python
# dependency just to use its remote-safe interpreter launcher.
alias(
    name = "python",
    actual = "@rules_python//python/bin:python",
    visibility = ["//visibility:public"],
)

# C-extension and embedding consumers should not need a direct rules_python
# dependency just to use the C toolchain that python_interpreters registers.
alias(
    name = "current_py_cc_headers",
    actual = "@rules_python//python/cc:current_py_cc_headers",
    visibility = ["//visibility:public"],
)

alias(
    name = "current_py_cc_headers_abi3",
    actual = "@rules_python//python/cc:current_py_cc_headers_abi3",
    visibility = ["//visibility:public"],
)

alias(
    name = "current_py_cc_libs",
    actual = "@rules_python//python/cc:current_py_cc_libs",
    visibility = ["//visibility:public"],
)

# Users can set --@aspect_rules_py//py:layer_tier=//path:custom_tier to switch
# the pip-package grouping + compression plan consumed by py_image_layer.
label_flag(
    name = "layer_tier",
    build_setting_default = "//py/private:default_layer_tier",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "current_py_toolchain",
    srcs = ["current_py_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//py/private/interpreter:current_py_toolchain"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//py/private:providers",
        "//py/private:py_image_layer",
        "//py/private:py_info",
        "//py/private:py_library",
        "//py/private:py_pex_binary",
        "//py/private:py_pytest_main",
        "//py/private:py_pytest_test",
        "//py/private:py_unittest_test",
        "//py/private:py_unpacked_wheel",
        "//py/private:py_wheel",
        "//py/private:virtual",
        "//py/private/interpreter:current_py_toolchain",
        "//py/private/interpreter:runtime",
        "//py/private/py_venv:defs",
        "@bazel_lib//lib:utils",
        "@rules_python//python:packaging_bzl",
        "@rules_python//python:pip_bzl",
        "@rules_python//python:py_runtime_bzl",
        "@rules_python//python:py_runtime_pair_bzl",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchains",
        "//py/private/interpreter:extension",
        "@aspect_tools_telemetry_report//:defs.bzl",
    ],
)

bzl_library(
    name = "toolchains",
    srcs = ["toolchains.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//py/private/toolchain:repo",
        "//py/private/toolchain:tools",
        "@bazel_lib//lib:repositories",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
    ],
)
