load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//py:__subpackages__", "//uv:__subpackages__"])

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    deps = [],
)

bzl_library(
    name = "integrity",
    srcs = ["integrity.bzl"],
    deps = ["//py/private/toolchain:tools"],
)
