# Separate from the Rust config so that we can reuse Rust in e2e testing whereas
# the cargo config is root repo specific.

bazel_dep(name = "xz", version = "5.4.5.bcr.5")
bazel_dep(name = "zstd", version = "1.5.7")
bazel_dep(name = "bzip2", version = "1.0.8.bcr.2")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
    ],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-unknown-linux-gnu",
    ],
)
crate.annotation(
    crate = "backtrace",
    # This just compiles code on Android, we don't need it.
    gen_build_script = "off",
    repositories = ["crates"],
)
crate.annotation(
    crate = "zstd-sys",
    # This build script is naughty and tries to depend on system zstd or build it from source.
    gen_build_script = "off",
    repositories = ["crates"],
    deps = ["@@zstd~//:zstd"],
)
crate.annotation(
    crate = "bzip2-sys",
    gen_build_script = "off",
    repositories = ["crates"],
    deps = ["@@bzip2~//:bz2"],
)
crate.annotation(
    crate = "lzma-sys",
    gen_build_script = "off",
    repositories = ["crates"],
    deps = ["@@xz~//:lzma"],
)
use_repo(crate, "crates")
