# FIXME: These are really the prod deps. Should be includeable.
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_rules_py", version = "0.0.0")
local_path_override(
    module_name = "aspect_rules_py",
    path = "..",
)

bazel_dep(name = "rules_python", version = "1.0.0")

include("//bazel/include:llvm.MODULE.bazel")

include("//bazel/include:rust.MODULE.bazel")

include("//bazel/include:test.MODULE.bazel")
