# LLVM configuration

bazel_dep(name = "rules_cc", version = "0.2.11")

bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.2.5", dev_dependency = True)
single_version_override(
    module_name = "toolchains_llvm_bootstrapped",
    patch_strip = 1,
    patches = [
        "//bazel/patches:llvm_darwin_sysroot.patch",
    ],
)

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)

#http_archive(
#    name = "sysroot_darwin_universal",
#    build_file_content = """
#filegroup(
#    name = "sysroot",
#    srcs = glob(
#        include = ["**"],
#        exclude = ["**/*:*"],
#    ),
#    visibility = ["//visibility:public"],
#)
#""",
#    integrity = "sha256-9qzGIJ251Wtn/K+R7B3v5Ici6esT3CH7kc/s6xSJ5X4=",
#    # The ruby header has an infinite symlink that we need to remove.
#    patch_cmds = ["rm System/Library/Frameworks/Ruby.framework/Versions/Current/Headers/ruby/ruby"],
#    strip_prefix = "MacOSX14.5.sdk",
#    urls = ["https://github.com/alexey-lysiuk/macos-sdk/releases/download/14.5/MacOSX14.5.tar.xz"],
#)