# Rust configuration

bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
)
rust.toolchain(
    edition = "2024",
    versions = ["1.88.0"],
    extra_target_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-musl",
    ],
)

use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")
