# Rust configuration

bazel_dep(name = "rules_rust", version = "0.67.0")
single_version_override(
    module_name = "rules_rust",
    patch_strip = 1,
    patches = [
        "//bazel/patches:rules_rust_musl_sysroot.patch",
    ],
)
bazel_dep(name = "openssl", version = "3.3.1.bcr.6")

RUST_EDITION = "2024"

RUST_VERSION = "1.88.0"

rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
)
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
    extra_target_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-musl",
    ],
)

use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")
