bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "bazel", version = "0.0.0")
bazel_dep(name = "googleapis", version = "0.0.0-20251127-8cd3749f")

archive_override(
    module_name = "bazel",
    strip_prefix = "bazel-master",
    urls = ["https://github.com/bazelbuild/bazel/archive/refs/heads/master.tar.gz"],
)

bazel_dep(name = "remoteapis", version = "0.0.0")
archive_override(
    module_name = "remoteapis",
    strip_prefix = "bazel-master/third_party/remoteapis",
    urls = ["https://github.com/bazelbuild/bazel/archive/refs/heads/master.tar.gz"],
)
