load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["create_release.sh"])

config_setting(
    name = "is_opt",
    values = {
        "compilation_mode": "opt",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "is_debug",
    values = {
        "compilation_mode": "dbg",
    },
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "hashes",
    srcs = ["hashes.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "release",
    srcs = ["release.bzl"],
    visibility = ["//visibility:public"],
)
