load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_rust//rust:bzl_lib",
        "@with_cfg.bzl//:with_cfg",
    ],
)

bzl_library(
    name = "multi_platform_rust_binaries",
    srcs = ["multi_platform_rust_binaries.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/release:hashes",
        "@bazel_lib//lib:transitions",
        "@bazel_skylib//rules:copy_file",
        "@rules_pkg//pkg:bzl_srcs",
    ],
)
