"Benchmark workspace for Bazel analysis phase performance"

module(name = "analysis_benchmark")

bazel_dep(name = "aspect_rules_py")
local_path_override(
    module_name = "aspect_rules_py",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")

interpreters = use_extension("@aspect_rules_py//py:extensions.bzl", "python_interpreters")
interpreters.toolchain(
    python_version = "3.11",
)
use_repo(interpreters, "python_interpreters")

register_toolchains("@python_interpreters//:all")

uv = use_extension("@aspect_rules_py//uv:extensions.bzl", "uv")
uv.declare_hub(hub_name = "pypi")
uv.project(
    hub_name = "pypi",
    lock = "//workspace:uv.lock",
    pyproject = "//workspace:pyproject.toml",
)
use_repo(uv, "pypi")
