load("@aspect_rules_py//py:defs.bzl", "py_binary")

py_binary(
    name = "bench",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        "@pypi//cowsay",
    ],
)

py_binary(
    name = "bench_syspath",
    srcs = ["syspath_probe.py"],
    main = "syspath_probe.py",
    deps = [
        "@pypi//cowsay",
    ],
)
