[project]
name = "analysis-benchmark"
version = "0.0.0"
description = "Synthetic workload to benchmark Bazel analysis phases in rules_py"
requires-python = ">=3.11"
# Project dependencies are intentionally empty; the benchmark workload uses
# PEP 735 dependency-groups so we can exercise dep_group transitions while
# keeping a large common set of packages reachable from every group.
dependencies = []

[dependency-groups]
default = [
    # Web framework & ecosystem
    "django~=4.2.7",
    "djangorestframework~=3.14.0",
    "django-filter~=23.5",
    "django-cors-headers~=4.3.1",

    # HTTP clients / servers
    "requests~=2.31.0",
    "httpx~=0.25.2",
    "fastapi~=0.109.0",
    "uvicorn~=0.27.0",
    "starlette~=0.35.0",
    "aiohttp~=3.9.0",

    # CLI / utilities
    "click~=8.1.7",
    "typer~=0.9.0",
    "rich~=13.7.0",
    "pydantic~=2.5.0",
    "pydantic-settings~=2.1.0",
    "python-dotenv~=1.0.0",
    "structlog~=24.1.0",
    "python-json-logger~=2.0.7",

    # Data / serialization
    "pyyaml~=6.0.1",
    "tomli~=2.0.1",
    "python-dateutil~=2.8.2",
    "pytz~=2023.3",
    "babel~=2.14.0",

    # Testing
    "pytest~=7.4.3",
    "pytest-asyncio~=0.21.1",
    "pytest-django~=4.7.0",
    "factory-boy~=3.3.0",
    "faker~=22.0.0",

    # Templating / markup
    "jinja2~=3.1.2",
    "markdown~=3.5.1",
    "pygments~=2.17.2",

    # Validation / schemas
    "marshmallow~=3.20.1",
    "webargs~=8.4.0",
    "apispec~=6.4.0",

    # Async helpers
    "anyio~=4.2.0",
    "sniffio~=1.3.0",
    "asyncio-mqtt~=0.16.1",

    # Caches / queues
    "celery~=5.3.6",
    "redis~=5.0.1",
    "kombu~=5.3.4",

    # Database
    "sqlalchemy~=2.0.23",
    "alembic~=1.13.1",

    # Cloud / SDKs (pure-python wheels only)
    "boto3~=1.34.0",
    "botocore~=1.34.0",
    "google-auth~=2.27.0",
    "azure-core~=1.30.0",

    # Web scraping / parsing
    "beautifulsoup4~=4.12.0",
    "html5lib~=1.1",

    # GraphQL
    "graphene~=3.3.0",
    "graphql-core~=3.2.0",

    # Monitoring / observability
    "sentry-sdk~=1.40.0",
    "prometheus-client~=0.19.0",
    "opentelemetry-api~=1.22.0",
    "opentelemetry-sdk~=1.22.0",

    # More Django / DRF ecosystem
    "django-extensions~=3.2.3",
    "django-debug-toolbar~=4.2.0",
    "django-environ~=0.11.2",
    "djangorestframework-simplejwt~=5.3.1",
    "drf-spectacular~=0.27.0",

    # Utilities
    "arrow~=1.3.0",
    "python-slugify~=8.0.1",
    "jsonschema~=4.21.0",
    "wtforms~=3.1.2",
    "pypdf~=4.0.0",
    "reportlab~=4.0.9",
    "inflection~=0.5.1",
    "uritemplate~=4.1.1",

    # Flask ecosystem
    "flask~=3.0.0",
    "flask-restful~=0.3.10",
    "flask-sqlalchemy~=3.1.1",
    "flask-migrate~=4.0.5",
    "flask-login~=0.6.3",
    "flask-wtf~=1.2.1",
    "werkzeug~=3.0.1",
    "itsdangerous~=2.1.2",

    # Auth / OAuth
    "requests-oauthlib~=1.3.1",
    "oauthlib~=3.2.2",
    "pyjwt~=2.8.0",

    # Google API client
    "google-api-python-client~=2.116.0",
    "google-auth-httplib2~=0.2.0",
    "google-auth-oauthlib~=1.2.0",

    # Interactive / notebooks (pure-python)
    "ipython~=8.20.0",
    "traitlets~=5.14.0",
    "matplotlib-inline~=0.1.6",
    "pexpect~=4.9.0",
    "prompt-toolkit~=3.0.43",

    # Documentation tooling
    "sphinx~=7.2.6",
    "sphinx-rtd-theme~=2.0.0",
    "sphinx-autodoc-typehints~=1.25.0",
    "mkdocs~=1.5.3",
    "mkdocs-material~=9.5.0",

    # Packaging
    "build~=1.0.3",
    "twine~=5.0.0",
]

dev = [
    { include-group = "default" },
    "black~=23.12.1",
    "flake8~=7.0.0",
    "mypy~=1.8.0",
    "isort~=5.13.2",
    "coverage~=7.4.0",
]

test = [
    { include-group = "default" },
    "pytest-cov~=4.1.0",
    "responses~=0.24.1",
]

[tool.uv]
package = true
