load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@aspect_rules_py//py/unstable:defs.bzl", "py_venv_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

platform(
    name = "arm64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "amd64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

py_venv_binary(
    name = "hello_bin",
    srcs = ["hello.py"],
    main = "hello.py",
    python_version = "3.12",
    venv = "hello_venv",
)

platform_transition_filegroup(
    name = "amd64_transition",
    srcs = [":hello_bin"],
    target_platform = ":amd64_linux",
)

platform_transition_filegroup(
    name = "arm64_transition",
    srcs = [":hello_bin"],
    target_platform = ":arm64_linux",
)

sh_test(
    name = "bcr_compatibility_test",
    srcs = ["test.sh"],
    data = [":arm64_transition"],
    tags = [
        "bcr-compat",
        "manual",
    ],
)
