module(
    name = "rules_py_bcr_simulation",
    version = "0.0.0",
)

bazel_dep(name = "aspect_rules_py", version = "0.0.0")
local_path_override(
    module_name = "aspect_rules_py",
    path = "../..",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "rules_shell", version = "0.3.0")

python = use_extension("@aspect_rules_py//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)
use_repo(python, "python_3_12")
register_toolchains("@python_3_12//:all")
